--- a/readme.html
+++ b/readme.html
@@ -65,6 +65,7 @@ channel.</p>
 <p>It can also (<a href="#slash-commands">with additional configuration</a>)
 respond to Slack slash commands and allow users to search for beers on Untappd.</p>
 <p>The source code is available on GitHub at <a href="https://github.com/nicksergeant/slacktapped"><a href="https://github.com/nicksergeant/slacktapped">https://github.com/nicksergeant/slacktapped</a></a>.</p>
+<p>Online documentation is available at <a href="http://slacktapped.com">slacktapped.com</a>.</p>
 <h2 id="setup" class="section-heading">
   <a href="#setup" class="hover-link"><i class="icon-link"></i></a>
   Setup
